content/nomad/v0.11.x/content/docs/commands/job/stop.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: 'Commands: job stop'
sidebar_title: stop
description: |
  The job stop command is used to stop a running job.
---

# Command: job stop

**Alias: `nomad stop`**

The `job stop` command is used to stop a running job and signals the scheduler
to cancel all of the running allocations.

## Usage

```plaintext
nomad job stop [options] <job>
```

The `job stop` command requires a single argument, specifying the job ID or
prefix to cancel. If there is an exact match based on the provided job ID or
prefix, then the job will be cancelled. Otherwise, a list of matching jobs and
information will be displayed.

Stop will issue a request to deregister the matched job and then invoke an
interactive monitor that exits automatically once the scheduler has processed
the request. It is safe to exit the monitor early using ctrl+c.

## General Options

@include 'general_options.mdx'

## Stop Options

- `-detach`: Return immediately instead of entering monitor mode. After the
  deregister command is submitted, a new evaluation ID is printed to the screen,
  which can be used to examine the evaluation using the [eval status] command.

- `-verbose`: Show full information.

- `-yes`: Automatic yes to prompts.

- `-purge`: Purge is used to stop the job and purge it from the system. If not
  set, the job will still be queryable and will be purged by the garbage
  collector.

## Examples

Stop the job with ID "job1":

```shell-session
$ nomad job stop job1
==> Monitoring evaluation "43bfe672"
    Evaluation status changed: "pending" -> "complete"
==> Evaluation "43bfe672" finished with status "complete"
```

Stop the job with ID "job1" and return immediately:

```shell-session
$ nomad job stop -detach job1
507d26cb
```

[eval status]: /docs/commands/eval-status
